fix(style): not adding spacing when field wrapper is not visible

--- a/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
+++ b/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
@@ -19,7 +19,11 @@
     flex: 1 1 0%;
   }
 
-  .field-wrapper + .field-wrapper.drop-down-wrapper {
-    margin-top: 0;
+  .field-wrapper:not([data-visible='false']) {
+    // Added specificity to override
+    // Clash class from repeatable panel
+    + .field-wrapper.drop-down-wrapper {
+      margin-top: 0;
+    }
   }
 }
